[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.1"
parse-display = "0.7.0"
parse-display-derive = "0.7.0"
regex = "1.5.4"
pathfinding = "4.0.0"
num-bigint = "0.4.3"