[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.1"
parse-display = "0.8.0"
parse-display-derive = "0.8.0"
regex = "1.5.4"
pathfinding = "4.0.0"
xxcalc = "0.2.1"
num-complex = "0.4.2"